--- a/webapp-example/pom.xml
+++ b/webapp-example/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>co.llective</groupId>
 	<artifactId>sample-app</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<packaging>war</packaging>
 
 	<description>Provides an example web app</description>
@@ -14,13 +14,13 @@
 		<dependency>
 			<groupId>com.logsense</groupId>
 			<artifactId>logback-logsense</artifactId>
-			<version>1.0</version>
+			<version>1.1.0</version>
 		</dependency>
 
 		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>log4j-over-slf4j</artifactId>
-			<version>1.7.25</version>
+		<groupId>org.slf4j</groupId>
+		<artifactId>slf4j-api</artifactId>
+		<version>1.7.25</version>
 		</dependency>
 
 		<dependency>
