--- a/webapp-example/pom.xml
+++ b/webapp-example/pom.xml
@@ -4,8 +4,8 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>co.llective</groupId>
-	<artifactId>sample-app</artifactId>
-	<version>0.0.2-SNAPSHOT</version>
+	<artifactId>sample-webapp</artifactId>
+	<version>1.1.2</version>
 	<packaging>war</packaging>
 
 	<description>Provides an example web app</description>
@@ -14,7 +14,7 @@
 		<dependency>
 			<groupId>com.logsense</groupId>
 			<artifactId>logback-logsense</artifactId>
-			<version>1.1.1</version>
+			<version>${project.version}</version>
 		</dependency>
 
 		<dependency>
